# phd

./: .gitignore
fhe/: marco_acm_notes.md  ntt_bitflip.py  ntt_mati.py
fhe/SEAL/SEAL-Python/examples/: bit.py
fhe/SEAL/native/src/seal/: testing.txt
fhe/SEAL/profile/: CMakeLists.txt  memory_profile.sh  time_profile.sh
fhe/SEAL/profile/img/: figs.py
fhe/SEAL/profile/src/: biggerParameters.cpp  bit.cpp  memory.cpp  random_test.cpp  time.cpp  time_console_NonHE.cpp  xloop.cpp
fhe/bitFlip-openfhe/: CMakeLists.txt  README.md
fhe/bitFlip-openfhe/analisis/: Makefile  encode_bitFlip.py  encryption_hd.py  input_bitFlip.py  input_bitFlip_nonRNS.py  utils.py
fhe/bitFlip-openfhe/img/: Makefile  encode_bitFlip.py  encode_bitFlip_nonNTT.py  encode_bitFlip_nonOps.py  encode_bitFlip_nonRNS.py  encrypt_bitFlip.py  encryption_hd.py  input_bitFlip.py  ntt.py  txt_to_image.py  utils.py
fhe/bitFlip-openfhe/src/: Makefile  README.md  encode_bitFlip.cpp  encode_bitFlip_multiRNS.cpp  encode_bitFlip_nonNTT.cpp  encode_bitFlip_nonOps.cpp  encode_bitFlip_nonRNS.cpp  encode_bitflip.cpp  encode_bitflip_catch.cpp  encrypt_bitFlip.cpp  encrypt_bitFlip_nonOps.cpp  encrypt_bitflip.cpp  encrypt_bitflip_catch.cpp  input_bitFlip.cpp  input_bitFlip_nonRNS.cpp  mask_encoding_test.cpp  ntt.cpp  simple-real-numbers.cpp  simple_math.cpp  utils_mati.h
fhe/bitFlip-openfhe/test/: encrypt.cpp  test.cpp  test_root.cpp
fhe/ckks_python/: ckks.py  distributions.py  distributions64.py  example.py  rescale.py  test_bit.py
fhe/mini_ckks/: README.md  ckks.py  example.py  leveling.py  modArithmetic.py  prime.py  test_bit.py  test_utils.py
fhe/resumen/: resumen.tex
fhe/sealProfile/: CMakeLists.txt  README.md  hardcodingSeal.txt  memory_profile.sh
fhe/sealProfile/data/: README.md  databaseToExample.py
fhe/sealProfile/img/: Makefile  encode_bitFlips_nonOps.py  encoding_bitFlips.py  figs_random.py  figs_random_diff_elem.py  figs_random_norm_elem.py  hammig.py  hammig_encrypt.py  img_encode_bitFlip.py  img_encode_bitFlip_animationCreate.py  ntt_bitFlips.py  random_diff.py  random_he_bitflips.py  txt_to_image.py
fhe/sealProfile/img/oudated/: porcentage.py  random_diff.py
fhe/sealProfile/src/: README.md  bit.cpp  bitflip_encode.cpp  encode_bitFlip.cpp  encode_bitFlip_nonOps.cpp  examples.h  heatmap.py  heatmap_fig.py  img_encode_bitFlip.cpp  memory_console.cpp  ntt_bitFlip.cpp  ntt_bitflip.cpp  random_encode.cpp  random_encode_NTT.cpp  random_encode_full.cpp  random_encode_image.cpp  random_encode_nonOptimizations.cpp  random_encode_ntt.cpp  random_encrypt.cpp  random_encrypt_ntt.cpp  random_test.cpp  randomness.cpp  statistic_encrypt_nonNTT_nonRNS.cpp  test_bitflipFloat.cpp  utils_mati.h  xloop.cpp
fhe/sealProfile/src/coarch/: random_encode.cpp  random_encode_ntt.cpp  random_encrypt.cpp  random_encrypt_ntt.cpp  statistic_encrypt_nonNTT_nonRNS.cpp
fhe/sealProfile/src/outdated/: memory.cpp  memory_console_NonHE.cpp  time.cpp  time_console.cpp  x16.cpp
fhe/sealProfile/test/: test.cpp
fpga/ej1/: Makefile
gem5/ibm-tutorial/: Makefile  README.md  daxpy-gpt.cpp  hello.c  hello_std.c  two_level_multi.py
materias/: Makefile
materias/block/: Blockchains_HW1.tex
materias/block/HW2/: Blockchains_HW2.tex  game.sol
materias/block/HW3/: Blockchains_HW3.tex  token.sol
materias/block/HW4/: Blockchains_HW4.tex
materias/src/: mod_m_counter_prog.vhd
materias/testbench/: mod_m_counter_prog_tb.vhd
presentations/augusto-esteban/22-07-05/: 05-Jul.tex
presentations/augusto-esteban/22-10-18/: 18-oct.tex
presentations/augusto-esteban/22-11-29/: 29-nov.tex
presentations/ibm-mentoring/22-10-31-ibm/: 31-oct.tex
presentations/ibm-mentoring/23-03-28-ibm/: presentation.nav  presentation.tex
presentations/ibm-mentoring/23-03-28-ibm-chaco/: presentation.tex
presentations/ibm-mentoring/23-05-26-CEY/: presentation.tex
resumen/: avances.tex  resumen.tex
works/: README.md
