cmake_minimum_required(VERSION 3.13)

project(SEALExamples VERSION 4.1.1 LANGUAGES CXX)


find_package(SEAL 4.1.1 EXACT REQUIRED)
find_package(GTest CONFIG REQUIRED)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -pg -no-pie -fno-builtin -pthread")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -std=c++2a -static -pg -no-pie -fno-builtin ")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -std=c++2a -pg -no-pie -fno-builtin ")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
set(CMAKE_BUILD_TYPE Debug)
set(GTEST_LIBRARIES gtest gmock gtest_main gmock_main pthread)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/logs)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/logs/log_encrypt)

file (GLOB EXAMPLES_SRC_FILES CONFIGURE_DEPENDS ${CMAKE_BINARY_DIR}/src/*.cpp)
#foreach (app ${EXAMPLES_SRC_FILES})
#  get_filename_component( exe ${app} NAME_WE)
#  add_executable ( ${exe} ${app} )
#  set_target_properties(${exe} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
#  target_link_libraries( ${exe} PRIVATE SEAL::seal)
#endforeach()

file (GLOB TEST_SRC_FILES CONFIGURE_DEPENDS ${CMAKE_BINARY_DIR}/test/*.cpp)
foreach (app ${TEST_SRC_FILES})
  get_filename_component( exe ${app} NAME_WE)
  add_executable ( ${exe} ${app} )
  set_target_properties(${exe} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
  target_link_libraries( ${exe} PRIVATE ${GTEST_LIBRARIES})
  target_link_libraries( ${exe} PRIVATE SEAL::seal)
endforeach()
